<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.silviavaldez.ressiapp.views.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/login_frame_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@mipmap/img_bg_shapes">

        <ImageView
            android:id="@+id/login_image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@mipmap/img_app_logo"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/login_frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <LinearLayout
            android:id="@+id/login_layout_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">

                <AutoCompleteTextView
                    android:id="@+id/login_edit_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-10dp"
                    android:background="@drawable/selector_text_bottom_grey"
                    android:hint="@string/login_user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_user"
                    android:textColorHighlight="@color/aqua_marine"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-10dp"
                    android:background="@drawable/selector_text_bottom_grey"
                    android:hint="@string/login_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_password"
                    android:textColorHighlight="@color/aqua_marine"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/caribbean_green" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/login_button_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_button_rounded_green"
                android:elevation="24dp"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="8dp"
                android:padding="5dp"
                android:shadowColor="@color/aqua_marine_30"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/login_layout_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_text_without_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="45dp"
                    android:text="@string/login_no_account"
                    android:textColor="@color/steel_grey_70" />

                <TextView
                    android:id="@+id/login_text_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/caribbean_green" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>
